Fixed button and text sizes so that its readable

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -16,15 +16,23 @@ p {
   font-size: 16px;
 }
 
+.basic-button {
+  width: 95px;
+  height: 27.6px;
+  font-size: 14px;
+}
+
 #root {
   height: 100vh;
   margin: 0;
   padding: 0;
+  
 }
 
 .title-bar {
   background: #ff854d;
   background: linear-gradient(90deg,rgba(255, 133, 77, 1) 0%, rgba(255, 166, 125, 1) 26%, rgba(237, 232, 202, 1) 100%);
+  height: 14px; 
 }
 
 .window {
@@ -35,6 +43,7 @@ p {
     margin: 0;
     box-sizing: border-box;
 }
+
 
 .window-body {
   flex-grow: 1;
